--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
         <nav class="navbar">
             <ul>
-                <li><a class="active" href="#home">home</a></li>
-                <li><a href="#about">about</a></li>
-                <li><a href="#education">education</a></li>
-                <li><a href="#skills">skills</a></li>
-                <li><a href="#contact">contact</a></li>
+                <li class="nav_li"><a class="nav__link" href="#home">home</a></li>
+                <li class="nav_li"><a class="nav__link" href="#about">about</a></li>
+                <li class="nav_li"><a class="nav__link" href="#education">education</a></li>
+                <li class="nav_li"><a class="nav__link" href="#skills">skills</a></li>
+                <li class="nav_li"><a class="nav__link" href="#contact">contact</a></li>
                 <li><a class="download" href=""> download CV <i class="fas fa-download"></i></a></li>
             </ul>
         </nav>
@@ -231,7 +231,7 @@
     <!-- ============================= scroll to top starts ========================== -->
 
     <a href="#home" class="top">
-        <i class="fas fa-arrow-up fa-3x" style='color: #e69e8f;'></i>
+        <i class="fas fa-arrow-up fa-2x" style='color: #e69e8f;'></i>
     </a>
 
     <!-- ============================= scroll to top ends ========================== -->
