--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
     <!-- ============================= scroll to top starts ========================== -->
 
     <a href="#home" class="top">
-        <i class="fas fa-arrow-up fa-2x" style='color: #e69e8f;'></i>
+        <i class="fas fa-arrow-up fa-2x"
+            style='color: #5f4b8b;background-color: #e69e8f;border-radius: 40%;padding: 1rem;'></i>
     </a>
 
     <!-- ============================= scroll to top ends ========================== -->
