--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <!-- stylesheet  -->
     <link rel="stylesheet" href="portfolionew.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -43,11 +44,11 @@
 
     <section class="home" id="home">
 
-        <h3>HI EVERYONE !!!</h3>
-        <h1>I'M <span>Vignesh Ravichandran</span></h1>
-        <h3>Welcome to my Portfolio</h3>
+        <h3 data-aos="fade-down">HI EVERYONE !!!</h3>
+        <h1 data-aos="fade-down" data-aos-delay="250">I'M <span>Vignesh Ravichandran</span></h1>
+        <h3 data-aos="fade-down" data-aos-delay="500">Welcome to my Portfolio</h3>
         <br>
-        <a href="#about"><button class="btn">about me</button></a>
+        <a href="#about" data-aos="fade-down" data-aos-delay="750"><button class="btn">about me</button></a>
 
     </section>
 
@@ -61,14 +62,14 @@
 
         <div class="row">
 
-            <div class="info">
+            <div class="info" data-aos="fade-down">
                 <h3> <span> name : </span> vignesh ravichandran</h3>
                 <h3> <span> age : </span> 20 </h3>
                 <h3> <span> qualification : </span> B.E-CSE(3<sup>rd</sup> year) </h3>
                 <h3> <span> institution :</span> GCE . bargur </h3>
                 <h3> <span> hobby :</span> web surfing </h3>
             </div>
-            <div class="para">
+            <div class="para" data-aos="fade-down" data-aos-delay="150">
 
 
                 <p> This is <span>VIGNESH</span> .Welcome to my Portfolio Website . This
@@ -97,19 +98,19 @@
                 <div class="timeline">
                     <div class="outer">
                         <div class="card">
-                            <div class="info">
+                            <div class="info" data-aos="fade-down" data-aos-delay="150">
                                 <h2 class="title_edu">2017</h2>
                                 <p>SSLC-94% <br>St.Paul Matric Higher Sec. School , Kurinjipadi.</p>
                             </div>
                         </div>
                         <div class="card">
-                            <div class="info">
+                            <div class="info" data-aos="fade-down" data-aos-delay="250">
                                 <h2 class="title_edu">2019</h2>
                                 <p>HSE-94% <br>St.Paul Matric Higher Sec. School , Kurinjipadi.</p>
                             </div>
                         </div>
                         <div class="card">
-                            <div class="info">
+                            <div class="info" data-aos="fade-down" data-aos-delay="350">
                                 <h2 class="title_edu">2019-Present</h2>
                                 <p>B.E., CSE : CGPA-8.73
                                     <br>
@@ -136,9 +137,9 @@
             <div class="box">
                 <div class="progress">
                     <div class="title">
-                        <h3>C/C++</h3>
+                        <h3 data-aos="fade-right">C/C++</h3>
                     </div>
-                    <div class="barline">
+                    <div class="barline" data-aos="fade-right" data-aos-delay="50">
                         <div class="countbar" data-percentNumber="80"></div>
                     </div>
                 </div>
@@ -146,9 +147,9 @@
             <div class="box">
                 <div class="progress">
                     <div class="title">
-                        <h3>Html & Css</h3>
+                        <h3 data-aos="fade-right" data-aos-delay="150">Html & Css</h3>
                     </div>
-                    <div class="barline">
+                    <div class="barline" data-aos="fade-right" data-aos-delay="200">
                         <div class="countbar" data-percentNumber="80"></div>
                     </div>
                 </div>
@@ -156,9 +157,9 @@
             <div class="box">
                 <div class="progress">
                     <div class="title">
-                        <h3>javascript</h3>
+                        <h3 data-aos="fade-right" data-aos-delay="300">javascript</h3>
                     </div>
-                    <div class="barline">
+                    <div class="barline" data-aos="fade-right" data-aos-delay="350">
                         <div class="countbar" data-percentNumber="70"></div>
                     </div>
                 </div>
@@ -166,9 +167,9 @@
             <div class="box">
                 <div class="progress">
                     <div class="title">
-                        <h3>sql</h3>
+                        <h3 data-aos="fade-right" data-aos-delay="450">sql</h3>
                     </div>
-                    <div class="barline">
+                    <div class="barline" data-aos="fade-right" data-aos-delay="500">
                         <div class="countbar" data-percentNumber="70"></div>
                     </div>
                 </div>
@@ -176,9 +177,9 @@
             <div class="box">
                 <div class="progress">
                     <div class="title">
-                        <h3>java</h3>
+                        <h3 data-aos="fade-right" data-aos-delay="600">java</h3>
                     </div>
-                    <div class="barline">
+                    <div class="barline" data-aos="fade-right" data-aos-delay="650">
                         <div class="countbar" data-percentNumber="60"></div>
                     </div>
                 </div>
@@ -204,9 +205,10 @@
                     <br>
                     <br>
                     <br>
-                    <h3> <i class="fas fa-envelope"></i> vignesh240102@gmail.com </h3>
-                    <h3> <i class="fas fa-phone"></i> +91-9629394494 </h3>
-                    <h3> <i class="fas fa-map-marker-alt"></i>Cuddalore - 607302 , India </h3>
+                    <h3 data-aos="fade-down"> <i class="fas fa-envelope"></i> vignesh240102@gmail.com </h3>
+                    <h3 data-aos="fade-down" data-aos-delay="200"> <i class="fas fa-phone"></i> +91-9629394494 </h3>
+                    <h3 data-aos="fade-down" data-aos-delay="400"> <i class="fas fa-map-marker-alt"></i>Cuddalore -
+                        607302 , India </h3>
                 </div>
 
             </div>
@@ -214,12 +216,13 @@
         </div>
         <div class="sm_wrap">
             <main class="card_b">
-                <div data-aos="fade-right">
+                <div>
                     <a class="sm" href="https://twitter.com/Vignesh24ravi" target="_blank"><i
-                            class="fab fa-twitter fa-3x"></i></a>
-                    <a class="sm" href=""><i class="fab fa-instagram fa-3x" target="_blank"></i></a>
-                    <a class="sm" href="https://github.com/Vignesh24R" target="_blank"><i
-                            class="fab fa-github fa-3x"></i></a>
+                            class="fab fa-twitter fa-3x" data-aos="fade-right" data-aos-delay="200"></i></a>
+                    <a class="sm" href="" target="_blank"><i class="fab fa-instagram fa-3x" data-aos="fade-right"
+                            data-aos-delay="400"></i></a>
+                    <a class="sm" href="https://github.com/Vignesh24R" target="_blank"><i class="fab fa-github fa-3x"
+                            data-aos="fade-right" data-aos-delay="600"></i></a>
                 </div>
             </main>
         </div>
@@ -240,6 +243,14 @@
     <!-- ++++++++++++++++++++++ scripts ++++++++++++++++++++++ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="portfolionew.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+
+        AOS.init({
+            duration: 1000,
+            once: false,
+        });
+    </script>
 
 </body>
 
