--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <nav class="navbar">
             <ul>
-                <li class="nav_li"><a class="nav__link" href="#home">home</a></li>
+                <li class="nav_li"><a class="nav__link active" href="#home">home</a></li>
                 <li class="nav_li"><a class="nav__link" href="#about">about</a></li>
                 <li class="nav_li"><a class="nav__link" href="#education">education</a></li>
                 <li class="nav_li"><a class="nav__link" href="#skills">skills</a></li>
