--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 <li class="nav_li"><a class="nav__link" href="#education">education</a></li>
                 <li class="nav_li"><a class="nav__link" href="#skills">skills</a></li>
                 <li class="nav_li"><a class="nav__link" href="#contact">contact</a></li>
-                <li><a class="download" href=""> download CV <i class="fas fa-download"></i></a></li>
+                <li><a class="download"
+                        href="https://drive.google.com/file/d/1-FDRjg8DsRuIGPvWf1qgZqE39ONx4661/view?usp=drivesdk">
+                        download CV <i class="fas fa-download"></i></a></li>
             </ul>
         </nav>
 
@@ -112,7 +114,7 @@
                         <div class="card">
                             <div class="info" data-aos="fade-down" data-aos-delay="350">
                                 <h2 class="title_edu">2019-Present</h2>
-                                <p>B.E., CSE : CGPA-8.73
+                                <p>B.E., CSE : CGPA-8.67
                                     <br>
                                     Government College of Engineering , Bargur.
                                 </p>
@@ -219,8 +221,8 @@
                 <div>
                     <a class="sm" href="https://twitter.com/Vignesh24ravi" target="_blank"><i
                             class="fab fa-twitter fa-3x" data-aos="fade-right" data-aos-delay="200"></i></a>
-                    <a class="sm" href="" target="_blank"><i class="fab fa-instagram fa-3x" data-aos="fade-right"
-                            data-aos-delay="400"></i></a>
+                    <a class="sm" href="https://instagram.com/_.mr._vicky?utm_medium=copy_link" target="_blank"><i
+                            class="fab fa-instagram fa-3x" data-aos="fade-right" data-aos-delay="400"></i></a>
                     <a class="sm" href="https://github.com/Vignesh24R" target="_blank"><i class="fab fa-github fa-3x"
                             data-aos="fade-right" data-aos-delay="600"></i></a>
                 </div>
