--- a/index.html
+++ b/index.html
@@ -142,6 +142,26 @@
                         <h3 data-aos="fade-right">C/C++</h3>
                     </div>
                     <div class="barline" data-aos="fade-right" data-aos-delay="50">
+                        <div class="countbar" data-percentNumber="90"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="progress">
+                    <div class="title">
+                        <h3 data-aos="fade-right" data-aos-delay="100">C#</h3>
+                    </div>
+                    <div class="barline" data-aos="fade-right" data-aos-delay="50">
+                        <div class="countbar" data-percentNumber="90"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="progress">
+                    <div class="title">
+                        <h3 data-aos="fade-right" data-aos-delay="300">.Net Core</h3>
+                    </div>
+                    <div class="barline" data-aos="fade-right" data-aos-delay="150">
                         <div class="countbar" data-percentNumber="80"></div>
                     </div>
                 </div>
