--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
             <div class="info" data-aos="fade-down">
                 <h3> <span> name : </span> vignesh ravichandran</h3>
-                <h3> <span> age : </span> 20 </h3>
-                <h3> <span> qualification : </span> B.E-CSE(3<sup>rd</sup> year) </h3>
+                <h3> <span> age : </span> 21 </h3>
+                <h3> <span> qualification : </span> B.E-CSE </h3>
                 <h3> <span> institution :</span> GCE . bargur </h3>
                 <h3> <span> hobby :</span> web surfing </h3>
             </div>
@@ -77,7 +77,7 @@
                 <p> This is <span>VIGNESH</span> .Welcome to my Portfolio Website . This
                     Portfolio represents a few
                     thing about
-                    me . I am currently doing my Bachelor's degree in Computer Science and Engineering .And I spend
+                    me . Seeking a beginner role to enhance and explore my technical knowledge gained at Government College of Engineering Bargur, Krishnagiri. Focused to solve real time problem by providing digital solutions. Looking to apply my skills towards the developing field .And I spend
                     a great deal of time in web surfing . I am a tireless seeker of knowledge .</p>
 
             </div>
@@ -189,7 +189,17 @@
             <div class="box">
                 <div class="progress">
                     <div class="title">
-                        <h3 data-aos="fade-right" data-aos-delay="450">sql</h3>
+                        <h3 data-aos="fade-right" data-aos-delay="450">MySQL</h3>
+                    </div>
+                    <div class="barline" data-aos="fade-right" data-aos-delay="500">
+                        <div class="countbar" data-percentNumber="70"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="progress">
+                    <div class="title">
+                        <h3 data-aos="fade-right" data-aos-delay="450">SQL Server</h3>
                     </div>
                     <div class="barline" data-aos="fade-right" data-aos-delay="500">
                         <div class="countbar" data-percentNumber="70"></div>
